--- a/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/index.html.twig
+++ b/src/Application/RelationsBundle/Resources/views/DemandeUsergroup/index.html.twig
@@ -38,6 +38,7 @@
                  <th>Groupe</th>
                    
                 <th>Status</th>
+                  <th>Parrain</th>
                 <th>Date de Demande</th>
                 <th>Actions</th>
             </tr>
@@ -56,6 +57,10 @@
                 {% if entity.isaccepted ==0 %}
                         En Attente
                 {% else %} Acceptée
+                {% endif %}</td><td>
+                     {% if entity.iduserParrain is not null %}
+                     {{ entity.iduserParrain }}
+                {% else %} ---
                 {% endif %}</td>
                 <td>{{ entity.createdAt|created_ago }}</td>
                    <td>
