--- a/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/index.html.twig
@@ -138,11 +138,11 @@ MES POSTS
               
           <th{% if paginationa.isSorted('e.globalnote') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Note Globale', 'e.globalnote') }}</th>
              
-           {% if is_granted("ROLE_ADMIN") %}
+         {#  {% if is_granted("ROLE_ADMIN") %}#}
  <th colspan="3"><center>Actions</center></th>
-{% else %}
+{#{% else %}
  <th><center>Actions</center></th>
-{% endif %}
+{% endif %}#}
         </tr>
     </thead>
  
@@ -242,7 +242,13 @@ MES POSTS
   {{ knp_pagination_render(paginationa) }}
 
 <hr>
-
+{% if paginationb is null %}
+<h3>VOUS DEVEZ CHOISIR UN GROUPE</h3>
+{% if is_granted("ROLE_USER") %}   
+<a href="{{ path('egroup_groupes_new') }}" class="btn btn-small btn-primary">Ajouter un groupe</a>
+{% endif %}
+<br><br>
+{% else %}
 {#-----------------------------------------------#}
 
  {#<center><h1>POSTS DU GROUPE {{ entity.proprietaire.idgroup }}</h1></center>
@@ -378,6 +384,6 @@ MES POSTS
     </table>
 
   {{ knp_pagination_render(paginationb) }}
-
+{% endif %}
 
     {% endblock %}
