--- a/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
+++ b/src/Application/EpostBundle/Resources/views/Epost/indexpropositions.html.twig
@@ -68,7 +68,7 @@ POSTS DE MON GROUPE
                 
                <td>  
                       <a href="{{ path('epost_showstandard', { 'blog_id': entity.id,'slug': entity.slug }) }}">
-                   </a></td>
+                   {{ entity.id }}</a></td>
             {#    <td><a href="{{ path('epost_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>#}
                 <td>{{ entity.name }}</td>
                  {% if entity.categorie is not null %}               
@@ -97,7 +97,8 @@ POSTS DE MON GROUPE
      
 {% endif %} 
                                    </td> 
-                <td>{{ entity.resume|raw }}</td>
+                  <td class="resume">{{ entity.resume|raw }}</td>
+                  
                     <td>{{ entity.tags|join(', ') }}   </td>
       <td>           {% if entity.globalnote is not null %}
    {#    Note Globale: #}
