--- a/src/Application/EpostBundle/Resources/views/EpostComments/form.html.twig
+++ b/src/Application/EpostBundle/Resources/views/EpostComments/form.html.twig
@@ -14,7 +14,7 @@
 
                 </tr>
                 <tr><td>
-                         <button type="submit" class="btn btn-small btn-warning">Modifier</button>
+                         <button type="submit" class="btn btn-small btn-warning">Ajouter</button>
                     </td></tr></tbody>
         </table>
 
