--- a/src/Application/MyNotesBundle/Resources/views/Notes/index.html.twig
+++ b/src/Application/MyNotesBundle/Resources/views/Notes/index.html.twig
@@ -46,7 +46,7 @@
                 <td>{{ entity.xyz }}</td>
                 <td>{% if entity.dt %}{{ entity.dt|date('Y-m-d') }}{% endif %}</td>
                 <td>{{ entity.wh }}</td>
-                <td>{{ entity.proprio }}</td>
+                <td>{{ entity.proprietaire }}</td>
                 <td>{{ entity.classement }}</td>
           <td>{{ entity.color.nom }}</td>
              <td>{{ entity.categories.nom }}</td>
