--- a/src/Application/MyNotesBundle/Resources/views/Notes/show.html.twig
+++ b/src/Application/MyNotesBundle/Resources/views/Notes/show.html.twig
@@ -35,8 +35,8 @@
             <td>{{ entity.wh }}</td>
         </tr>
         <tr>
-            <th>Proprio</th>
-            <td>{{ entity.proprio }}</td>
+            <th>Proprietaire</th>
+            <td>{{ entity.proprietaire }}</td>
         </tr>
         <tr>
             <th>Classement</th>
