--- a/src/Application/MyNotesBundle/Resources/views/layout.html.twig
+++ b/src/Application/MyNotesBundle/Resources/views/layout.html.twig
@@ -4,9 +4,16 @@
         <title>{% block title %}Sticky Notes{% endblock %}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
           {% block stylesheets %}
-         <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
+        
+       
+           <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" type="text/css" />
+           <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
+          <link rel="stylesheet" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}" type="text/css" media="all"/>
+      {#
+       <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" type="text/css" />
         <link rel="stylesheet" href="{{ asset('css/jquery-ui-1.9.2.custom.css') }}" type="text/css" media="all"/>
+#}
  <!--     <link rel="stylesheet" href="{{ asset('bundles/whiteoctoberpagerfanta/css/pagerfantaDefault.css') }}" type="text/css" media="all" />
         --> 
         <style type="text/css">
