--- a/src/Application/MyNotesBundle/Resources/views/Notes/indexsticky.html.twig
+++ b/src/Application/MyNotesBundle/Resources/views/Notes/indexsticky.html.twig
@@ -1,4 +1,4 @@
-{% extends "ApplicationMyNotesBundle::layout.html.twig" %}
+{% extends "ApplicationMyNotesBundle::layoutsticky.html.twig" %}
 
   {% block stylesheets %}
    {{parent()}}
@@ -6,17 +6,17 @@
       <link rel="stylesheet" href="{{ asset('css/fancy/jquery.fancybox-1.2.6.css') }}" type="text/css" />
       <link rel="stylesheet" href="{{ asset('css/fancy/jquery.fancybox.css') }}" type="text/css" />
       <link rel="stylesheet" href="{{ asset('css/fancy/jquery.fancybox-buttons.css') }}" type="text/css" />
-     
-   
+          <link rel="stylesheet" href="{{ asset('bundles/applicationepost/css/sliding.css') }}" type="text/css" media="all"/>
+
  
 <style>
   textarea {
 
         /*   font-family: cursive;*/
-        font:14px 'Gloria Hallelujah', cursive;
+        font:12px 'Gloria Hallelujah', cursive;
         /*  line-height:1.5;*/
         background-color:transparent;
-        border:0;
+        border:1;
         /*
          border-radius:3px;
           background: linear-gradient(#F9EFAF, #F7E98D);
@@ -26,8 +26,8 @@
         /*transition:box-shadow 0.5s ease;
         transition:-webkit-box-shadow 0.5s ease;*/
         font-smoothing:subpixel-antialiased;
-        max-width:520px;
-        height:90%;
+        width:100%;
+        height:60%;
         max-height:100%;
     }
     
@@ -78,6 +78,7 @@
     #cart
     {
         width:75%;float:left;height:50px;
+        margin-left:10px;
         background-color:#869cbf;
         padding:10px;
         -moz-border-radius:5px;
@@ -115,12 +116,12 @@
     
     div.emptytrash
     {
-        float:left;
+        float:right;
         margin-top:5px;
-      background: url("/images/empty.png") no-repeat;
-        width:90px;
-        height:90px;
-        margin-left:40px;
+      background: url("/images/emptysmall.gif") no-repeat;
+        width:70px;
+        height:70px;
+        margin-right:20px;
     }
      div.emptytrash:hover
     {
@@ -133,10 +134,10 @@
    /*.full {*/
      float:left;
         margin-top:5px;
-  background: url("/images/fullm.png") no-repeat;
-    width:130px;
-        height:130px;
-        margin-left:40px;
+  background: url("/images/fullsmall.gif") no-repeat;
+    width:70px;
+        height:70px;
+        margin-left:80px;
    }
 
 .over {
@@ -192,23 +193,16 @@
              {#% debug entities.categories%#}
    <div class="note zoomTarget {{ entity.color }}" id="{{ entity.id }}" 
         style="padding-top:0px;  width:{{mysize[0]}}px;height:{{mysize[1]}}px;left:{{mypos[0]}}px;top:{{mypos[1]}}px;">
-        
-        {#height:{{mysize[0]}}px;  left:{{mypos[0]}}px; top:{{mypos[1]}}px;">#}
-       
-       {#
-        list($width, $height) = explode('x', $row['wh']);
-    $notes.= '<div class="note zoomTarget ' . $row['color'] . '" id="' . $row['id'] . '" ';
-    $notes .='style="padding-top:0px;  width:' . $width . 'px;height:' . $height . 'px; left:' . $left . 'px;top:' . $top . 'px;z-index:' . $zindex . '">';
-  #}
-    
-    
    <div class="bar_titre" style="width:100%;">
    <div class="categories">{{ entity.categories.nom }}</div>
    <div class="delnote"><a  class="deltsticky ui-icon ui-icon-trash" id="{{ entity.id }}" href="#"></a></div>
    </div>
    <textarea class="area-note" id="stickynote-{{ entity.id }}">{{entity.text}}</textarea>
     <div class="author">{{ entity.proprietaire }}</div>
-    </div>
+   
+     <a class="editnote ui-icon ui-icon-pencil " href="{{ path('notes_edit', { 'id': entity.id }) }}">
+             <i class="icon-arrow-down"></i></a>
+   </div>
     
     
     {% endfor %}
@@ -252,7 +246,6 @@
         <input type="text" value="Add some text here" />
     </div>
 </div>
-
 
 
 
